[package]
name = "dubbo-rust-sdk"
version = "0.1.0"
authors = ["linux_china <libing.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "0.2", features = ["full"] }
tokio-test = "0.2.1"
bytes ="0.5.4"
